@@ -14,7 +14,6 @@ import io.camunda.search.query.SearchQueryBuilders;
 import io.camunda.search.query.SearchQueryResult;
 import io.camunda.security.auth.Authentication;
 import io.camunda.security.auth.Authorization;
-import io.camunda.security.entity.Permission;
 import io.camunda.service.search.core.SearchQueryService;
 import io.camunda.service.security.SecurityContextProvider;
 import io.camunda.zeebe.broker.client.api.BrokerClient;
@@ -67,7 +66,7 @@ public class AuthorizationServices
   }
 
   public List<String> getAuthorizedResources(
-      final Set<Long> ownerKeys,
+      final Set<String> ownerIds,
       final PermissionType permissionType,
       final AuthorizationResourceType resourceType) {
     final var authorizationQuery =
@@ -75,24 +74,19 @@ public class AuthorizationServices
             fn ->
                 fn.filter(
                     f ->
-                        f.ownerKeys(ownerKeys.stream().toList())
+                        f.ownerIds(ownerIds.stream().toList())
                             .permissionType(permissionType)
                             .resourceType(resourceType.name())));
-    return findAll(authorizationQuery).stream()
-        .map(AuthorizationEntity::permissions)
-        .flatMap(List::stream)
-        .map(Permission::resourceIds)
-        .flatMap(Set::stream)
-        .collect(Collectors.toList());
+    return findAll(authorizationQuery).stream().map(AuthorizationEntity::resourceId).toList();
   }
 
-  public List<String> getAuthorizedApplications(final Set<Long> ownerKeys) {
+  public List<String> getAuthorizedApplications(final Set<String> ownerIds) {
     return getAuthorizedResources(
-        ownerKeys, PermissionType.READ, AuthorizationResourceType.APPLICATION);
+        ownerIds, PermissionType.READ, AuthorizationResourceType.APPLICATION);
   }
 
   public Set<String> fetchAssignedPermissions(
-      final Long ownerKey, final AuthorizationResourceType resourceType, final String resourceId) {
+      final String ownerId, final AuthorizationResourceType resourceType, final String resourceId) {
     final SearchQueryResult<AuthorizationEntity> result =
         search(
             SearchQueryBuilders.authorizationSearchQuery(
@@ -104,13 +98,13 @@ public class AuthorizationServices
                                         resourceId != null && !resourceId.isEmpty()
                                             ? resourceId
                                             : null)
-                                    .ownerKeys(ownerKey))
+                                    .ownerIds(ownerId))
                         .page(p -> p.size(1))));
     // TODO logic to fetch indirect authorizations via roles/groups should be added later
     return result.items().stream()
-        .flatMap(authorization -> authorization.permissions().stream())
-        .filter(permission -> permission.resourceIds().contains(resourceId))
-        .map(Permission -> Permission.type().name())
+        .filter(authorization -> authorization.resourceId().contains(resourceId))
+        .flatMap(authorization -> authorization.permissionTypes().stream())
+        .map(PermissionType::name)
         .collect(Collectors.toSet());
   }
 
@@ -120,9 +114,9 @@ public class AuthorizationServices
         new BrokerAuthorizationCreateRequest()
             .setOwnerId(request.ownerId())
             .setOwnerType(request.ownerType())
-            .setResourceId(request.resourceId())
             .setResourceType(request.resourceType())
-            .setPermissions(request.permissions());
+            .setResourceId(request.resourceId())
+            .setPermissionTypes(request.permissionType());
     return sendBrokerRequest(brokerRequest);
   }
 
@@ -136,5 +130,5 @@ public class AuthorizationServices
       AuthorizationOwnerType ownerType,
       String resourceId,
       AuthorizationResourceType resourceType,
-      Set<PermissionType> permissions) {}
+      Set<PermissionType> permissionType) {}
 }
